# strangely

./: Cargo.toml  Dockerfile  deployment.yaml  service.yaml
src/: main.rs
