[package]
name = "strangify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
rand = "0.8.5"
rustface = "0.1.7"
ureq = "2.9.7"
axum = "0.7.5"
serde_derive = "1.0.203"
serde = "1.0.203"
